--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>General Information</title>
+  <title>Important Update - Starting Eleven</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="email-container">
-    <div  class="email-header">
-    <div class="email-logo">
-      <img src="logo-white.png" alt="Company Logo">
+    <!-- Header Section -->
+    <div class="email-header">
+      <div class="logo"><img src="logo-white.png" alt=""></div>
+      <h1>Important Update</h1>
     </div>
-    Important Update</div>
+    
+    <!-- Content Section -->
     <div class="email-content">
       <p>Hello,</p>
-      <p>We are reaching out to share some important information with you. Please read the details below carefully.</p>
-      <p>If you have any questions or require further assistance, please contact our support team.</p>
-      <a href="{{SUPPORT_URL}}" class="cta-button">Contact Support</a>
+      <p>We are reaching out to inform you of an important update regarding our services. Please review the following details carefully:</p>
+      <ul>
+        <li><strong>New Feature Release:</strong> Our platform is introducing an enhanced dashboard to improve your experience.</li>
+        <li><strong>Maintenance Schedule:</strong> Scheduled maintenance will take place on May 30, 2025.</li>
+        <li><strong>Security Improvements:</strong> Additional security measures have been implemented to protect your data.</li>
+      </ul>
+      <p>If you have any questions or need further assistance, please don't hesitate to get in touch with our support team.</p>
+      <a href="https://support.startingeleven.com" class="cta-button">Contact Support</a>
     </div>
+    
+    <!-- Footer Section -->
     <div class="email-footer">
-      <p>If you need help, contact our support team.</p>
       <p>© 2025 Starting Eleven. All rights reserved.</p>
+      <p>This email was sent to you because you signed up for Starting Eleven.</p>
     </div>
   </div>
 </body>
